--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@prisma/client": "^3.15.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
